# Node64

./: '  .gitignore  :w  README.md  index.html  package-lock.json  package.json
ChessData/Analysis/: test
node64-db/: Cargo.toml  README.md  schema.sql
node64-db/data/: eco_openings.tsv
node64-db/src/: commands.rs  db.rs  eco.rs  explorer.rs  import.rs  lib.rs  models.rs  pgn.rs  search.rs  util.rs  zobrist.rs
node64-db/src/chess/: board.rs  mod.rs  movegen.rs  san.rs  types.rs
node64-db/tests/: basic.rs
public/: todo.txt
src/: App.css  App.jsx  ChessGround.jsx  GameBoard.jsx  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: explorer.rs  lib.rs  main.rs
src/Components/: Notation.css  Notation.jsx
src/DataClasses/: ChessDocument.jsx  Node.jsx  NodeMaker.jsx  PgnAgent.jsx  PgnHead.jsx  PgnTracker.jsx  RepertoireDocument.jsx  StockfishAgent.jsx  Tab.jsx  TrainerDocument.jsx
src/Documents/: AnalysisDocument.jsx  ChessData.jsx  DatabaseDocument.jsx  PgnDocument.jsx  RepNode.jsx  RepertoireDocument.jsx  RepertoireTrainer.jsx  StandardDocument.jsx  StockfishDocument.jsx
src/NEW/: Modals.jsx
src/Pages/: AnalysisPage.css  AnalysisPage.jsx
src/ReusableComponents/: ContextMenu.jsx  FileNameField.jsx  SaveButton.jsx  SelectField.jsx  TextField.jsx
src/Shell/: Shell.css  Shell.jsx
src/context/: ChessContext.jsx
src/documents/: ChessDocument.jsx
src/layout/: appShell.jsx
src/logic/: Observable.jsx
src/panels/: Board.jsx  Engine.jsx  Explorer.jsx  Notation.jsx  board.css
(+176 files in other folders)
